# template-package

./: README.rst  publish-python.yaml  setup.cfg  stdeb.cfg
.github/workflows/: ci.yaml
template_package/: __init__.py
test/: spell_check.words  test_flake8.py  test_spell_check.py
